Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBNET.CS

            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChConfigExx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChConfigExx(UInt32 configval, UInt16 count, UInt16 bitrateflag, UInt16 bytesperblock, UInt16 framespersecond, UInt16 blocksperframe, UInt16 interbytegap, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdAddr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_CmdAddr(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdAlloc", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_CmdAlloc(Int32 count, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdAllocEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_CmdAllocEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdBaseRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_CmdBaseRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdBaseWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdBaseWr(UInt32 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdClear", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdClear(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdCountRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdCountRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdCountWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdCountWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdCtrlRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdCtrlRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdCtrlWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdCtrlWr(UInt16 ctrlval, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdCurrRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdCurrRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdCurrWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdCurrWr(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdInit", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdInit(UInt16 opcode, UInt16[] block);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdInsert", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdInsert(UInt16[] block, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdMaxLoopRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdMaxLoopRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdMaxLoopWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdMaxLoopWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdRd(UInt16[] block, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdRestart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdShotWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdShotWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdSkipWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdSkipWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdStackClr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdStackClr(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdStartRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdStartRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdStartWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdStartWr(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdStepWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdStepWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdTotalRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdTotalRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdTotalWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdTotalWr(Int32 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_CmdWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdWr(UInt16[] block, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_DllUsageCount", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_DllUsageCount();
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_FilterAddr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterAddr(Int32 addrval, Int32 sival, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_FilterCreate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterCreate(IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_FilterFill", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_FilterFill(UInt32 msgaddr, UInt32 basevaladdr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_GetChanCount", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_GetChanCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_IsChan", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_IsChan(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_IsRcvChan", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_IsRcvChan(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_IsXmtChan", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_IsXmtChan(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListAddr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListAddr(Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListAddrEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListAddrEx(Int32 index, UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListAdvance", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListAdvance(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListClear", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListClear(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListConfig(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListConfigEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListConfigEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListDataRdEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListDataRdEx(byte[] buf, Int32 count, Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListDataWrEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListDataWrEx(byte[] buf, Int32 count, Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListInit", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListInit(UInt32 listaddr, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListNextRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListNextRd(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListNextWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListNextWr(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListPostRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ListPostRd(UInt32 listaddr, UInt16[] header, IntPtr handleval);
